[gd_scene load_steps=6 format=2]

[ext_resource path="res://engine/lobby.gd" type="Script" id=1]
[ext_resource path="res://ui/TetraForce.tres" type="Theme" id=2]
[ext_resource path="res://engine/characterselect.gd" type="Script" id=3]
[ext_resource path="res://player/player.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "animation"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("preview:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="lobby" type="Control"]
margin_left = -120.805
margin_top = -65.401
margin_right = -80.8054
margin_bottom = -25.4011
rect_scale = Vector2( 0.5, 0.5 )
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = 393.514
margin_top = 162.774
margin_right = 613.514
margin_bottom = 202.774
size_flags_horizontal = 2
size_flags_vertical = 0
theme = ExtResource( 2 )
text = "TetraForce"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="."]
margin_left = 389.61
margin_top = 245.0
margin_right = 609.61
margin_bottom = 306.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="address" type="LineEdit" parent="panel"]
margin_left = 10.2468
margin_top = 30.2467
margin_right = 125.247
margin_bottom = 54.2467
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="panel"]
margin_left = 72.4255
margin_top = 4.70076
margin_right = 152.425
margin_bottom = 24.7008
size_flags_horizontal = 2
size_flags_vertical = 2
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="panel"]
margin_left = 131.14
margin_top = 33.4906
margin_right = 211.14
margin_bottom = 53.4906
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_ok" type="Label" parent="panel"]
margin_left = 10.0
margin_top = 64.0
margin_right = 210.0
margin_bottom = 78.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 1, 0.015625, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_fail" type="Label" parent="panel"]
margin_left = 10.0
margin_top = 64.0
margin_right = 210.0
margin_bottom = 78.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="characterselect" type="Panel" parent="."]
margin_left = 435.363
margin_top = 318.247
margin_right = 567.363
margin_bottom = 405.247
rect_pivot_offset = Vector2( 50.0191, 75.2492 )
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="LineEdit" parent="characterselect"]
margin_left = 6.0
margin_top = 56.0
margin_right = 125.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Greg"
placeholder_text = "Display Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="characterselect"]
autoplay = "animation"
playback_speed = 4.0
anims/animation = SubResource( 1 )

[node name="preview" type="Sprite" parent="characterselect"]
position = Vector2( 63.8569, 28 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
vframes = 7
hframes = 6
frame = 1

[node name="back" type="Button" parent="characterselect"]
margin_left = 11.8569
margin_top = 20.0
margin_right = 33.8569
margin_bottom = 38.0
text = "<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="forward" type="Button" parent="characterselect"]
margin_left = 96.0
margin_top = 20.0
margin_right = 118.0
margin_bottom = 38.0
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="panel/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="panel/join" to="." method="_on_join_pressed"]
